<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingRight="@dimen/dimen26"
    android:paddingLeft="@dimen/dimen26"
    android:background="@color/bg_login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcome_logo"
            android:contentDescription="Golongan Logo" />

        <EditText
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:hint="@string/login_username"
            android:textSize="@dimen/font22"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:hint="@string/login_password"
            android:textSize="@dimen/font22"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen56"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/login_btn_login"
            android:textColor="@color/background"
            android:textSize="@dimen/font22"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="@dimen/dimen10"
            android:text="@string/login_or"
            android:textColor="@color/background"
            android:textSize="@dimen/font22"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen56"
            android:text="@string/login_btn_fb"
            android:textSize="@dimen/font22"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_acc"
                android:textColor="@color/background"
                android:textSize="@dimen/font22"/>
            <TextView
                android:id="@+id/register"

                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:paddingLeft="@dimen/font10"
                android:textColor="@color/background"
                android:textSize="@dimen/font22"/>


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>