<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen20"
    android:background="@color/bg_login"
    tools:context=".proses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font36"
            android:textColor="@color/background"
            android:text="@string/almst"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:textSize="@dimen/font14"
            android:textColor="@color/background"
            android:text="@string/kata"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/vry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:layout_marginTop="@dimen/dimen40"
            android:background="@drawable/button_garis_putih"
            android:text="@string/vry"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>